[package]
name = "usbsas-client"
version = "0.3.2"
edition = "2021"
license = "GPL-3.0"
description = "Graphical User Interface for usbsas"

[dependencies]
bytesize = "2.1"
clap = "4.5"
env_logger = "0.11"
iced = { version = "0.13", features = ["advanced", "image", "smol", "svg"] }
log = "0.4"
serde_json = "1.0"
sysinfo = "0.37"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1.47", features = ["sync"] }
tokio-stream = "0.1"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
uuid = { version = "1.18", features = ["v4"] }

# cargo-deb
[package.metadata.deb]
name = "usbsas-kiosk"
maintainer = "usbsas"
copyright = "usbsas"
revision = "1"
depends = "$auto, usbsas-server, xserver-xorg-core, x11-xserver-utils, libxkbcommon-x11-0, xinit, xdotool, unclutter, fonts-noto-color-emoji"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { unit-name = "usbsas-client", enable = false }
assets = [
  ["target/release/usbsas-client", "usr/bin/", "755"],
  ["assets/usbsas-client-xinit", "usr/bin/", "755"],
]
