[package]
name = "usbsas-cmdexec"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
