[package]
name = "usbsas-cmdexec"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"

[dependencies]
byteorder = "1.5"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
