[package]
name = "usbsas-dev2scsi"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bootsector = "0.2"
byteorder = "1.4"
env_logger = "0.10"
log = "0.4"
rusb = "0.9"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-mass-storage = { path = "../usbsas-mass-storage" }
usbsas-mock = { path = "../usbsas-mock", optional = true }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }

[features]
mock = ["usbsas-mock"]
