[package]
name = "usbsas-files2fs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bitvec = "1.0.1"
env_logger = "0.9.0"
fscommon = { git = "https://github.com/rafalh/rust-fscommon", rev = "248292ca9dd3a90d2dc345564f38858ef455526f" }
log = "0.4.17"
thiserror = "1.0.34"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-fsrw = { path = "../usbsas-fsrw" }
usbsas-mbr = { path = "../usbsas-mbr" }
usbsas-privileges = { path = "../usbsas-privileges" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
