[package]
name = "usbsas-files2fs"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bitvec = "1.0"
env_logger = "0.11"
fscommon = { git = "https://github.com/rafalh/rust-fscommon", rev = "89706258032efff88689f6083510ed34b845fe46" }
log = "0.4"
thiserror = "2.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-fsrw = { path = "../usbsas-fsrw" }
usbsas-mbr = { path = "../usbsas-mbr" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-utils = { path = "../usbsas-utils" }
