[package]
name = "usbsas-files2tar"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
byteorder = "1.4.3"
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0.85"
tar = "0.4.38"
thiserror = "1.0.34"
time = "0.3.14"
uname = "0.1.1"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-privileges = { path = "../usbsas-privileges" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
