[package]
name = "usbsas-files2tar"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"

[dependencies]
byteorder = "1.4"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
tar = "0.4"
thiserror = "1.0"
time = "0.3"
uname = "0.1"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-privileges = { path = "../usbsas-privileges" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
