[package]
name = "usbsas-files2tar"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"

[dependencies]
env_logger = "0.11"
log = "0.4"
tar = "0.4"
thiserror = "2.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-utils = { path = "../usbsas-utils" }
