[package]
name = "usbsas-filter"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[dependencies]
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-utils = { path = "../usbsas-utils" }
