[package]
name = "usbsas-fs2dev"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bitvec = "1.0"
byteorder = "1.5"
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-mass-storage = { path = "../usbsas-mass-storage" }
usbsas-mock = { path = "../usbsas-mock", optional = true }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-utils = { path = "../usbsas-utils" }

[features]
mock = ["usbsas-mock"]
