[package]
name = "usbsas-fsrw"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.65"
ext4 = { git = "https://github.com/FauxFaux/ext4-rs", rev = "292c80fdf99533d6ac700a588497cd9f52631614" }
ff = { path = "../ff" }
iso9660 = { git = "https://github.com/losynix/iso9660-rs", branch = "into_inner" }
libc = "0.2.133"
log = "0.4.17"
ntfs = "0.2.0"
ntfs3g = { path = "../ntfs3g" }
positioned-io2 = "0.3.4"
thiserror = "1.0.36"
time = "0.3.14"
usbsas-proto = { path = "../usbsas-proto" }
