[package]
name = "usbsas-hid"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
links = "X11,Xtst"
description = "usbsas userland HID"

[dependencies]
bitfield = "0.19"
env_logger = "0.11"
log = "0.4"
dbus-crossroads = "0.5"
dbus = "0.9"
lazy_static = "1.5"
rusb = { version = "0.9", features = ["vendored"] }
usbsas-sandbox = { path = "../usbsas-sandbox" }
x11 = "2.21"

[[bin]]
name = "hid-dealer"
path = "src/hid-dealer.rs"

[[bin]]
name = "hid-user"
path = "src/hid-user.rs"

# cargo-deb
[package.metadata.deb]
name = "usbsas-hid"
maintainer = "usbsas"
copyright = "usbsas"
revision = "1"
depends = "$auto, sudo, dbus, usbsas-kiosk"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
triggers-file = "debian/triggers"
assets = [
  ["target/release/hid-dealer", "usr/libexec/", "755"],
  ["target/release/hid-user", "usr/libexec/", "755"],
  ["assets/hid-hotplug", "usr/libexec/", "755"],
  ["assets/99-usbsas-hid.rules", "etc/udev/rules.d/", "644"],
  ["assets/hid.conf", "etc/modprobe.d/", "644"],
  ["assets/hid-dealer.service", "usr/lib/systemd/user/", "644"],
  ["assets/udev-trigger", "etc/sudoers.d/", "644"],
]
