[package]
name = "usbsas-identificator"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
thiserror = "1.0.35"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-privileges = { path = "../usbsas-privileges" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
