[package]
name = "usbsas-identificator"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"

[dependencies]
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
