[package]
name = "usbsas-local2files"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-utils = { path = "../usbsas-utils" }
