[package]
name = "usbsas-mass-storage"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"

[dependencies]
log = "0.4"
lru = "0.11"
positioned-io2 = "0.3"
rusb = { git = "https://github.com/losynix/rusb", branch = "disable_device_discovery", features = ["vendored"] }
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-scsi = { path = "../usbsas-scsi" }
