[package]
name = "usbsas-mass-storage"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"

[dependencies]
log = "0.4"
lru = "0.15"
positioned-io2 = "0.3"
rusb = { version = "0.9", features = ["vendored"] }
thiserror = "2.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-scsi = { path = "../usbsas-scsi" }
