[package]
name = "usbsas-net"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"

[dependencies]
base64 = { version = "0.13", optional = true }
env_logger = "0.10"
libgssapi = { version = "0.6", optional = true }
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }

[features]
authkrb = ["base64", "libgssapi"]
default = ["authkrb"]
