[package]
name = "usbsas-net"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"

[dependencies]
base64 = { version = "0.21", optional = true }
env_logger = "0.10"
libgssapi = { version = "0.6", optional = true }
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-utils = { path = "../usbsas-utils" }

[features]
authkrb = ["base64", "libgssapi"]
default = ["authkrb"]

[[bin]]
path = "src/bin/analyzer.rs"
name = "usbsas-analyzer"

[[bin]]
path = "src/bin/uploader.rs"
name = "usbsas-uploader"

[[bin]]
path = "src/bin/downloader.rs"
name = "usbsas-downloader"
