[package]
name = "usbsas-sandbox"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"

[build-dependencies]
cc = "1.0"

[dependencies]
landlock = "0.3"
libc = "0.2"
log = "0.4"
procfs = { version = "0.15", default-features = false }
syscallz = "0.17"
thiserror = "1.0"

[features]
landlock-enforce = []
