[package]
name = "usbsas-scsi2files"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"

[dependencies]
byteorder = "1.5"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-fsrw = { path = "../usbsas-fsrw" }
usbsas-mass-storage = { path = "../usbsas-mass-storage" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-utils = { path = "../usbsas-utils" }
