[package]
name = "usbsas-server"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
description = "usbsas web server"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
base64 = "0.13.0"
clap = "4.0.17"
err-derive = "0.3.1"
futures = "0.3.24"
hmac = { version = "0.12.1", features = ["reset"] }
log = "0.4.17"
mac_address = "1.1.4"
nix = "0.25.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha2 = "0.10.6"
systemstat = "0.2.1"
tempfile = "3.3.0"
time = "0.3.15"
toml = "0.5.9"
uname = "0.1.1"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
uuid = { version = "1.2.1", features = ["v4"], optional = true }

[dev-dependencies]
assert_cmd = "2.0.4"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }

[features]
log-json = ["usbsas-utils/log-json", "uuid"]

# cargo-deb
[package.metadata.deb]
maintainer = "usbsas"
copyright = "usbsas"
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
triggers-file = "debian/triggers"
assets = [
  ["target/release/usbsas-server", "usr/bin/", "755"],
  ["target/release/usbsas-usbsas", "usr/libexec/", "755"],
  ["../config.example.toml", "etc/usbsas/config.toml", "644"],
  ["assets/99-usbsas.rules", "etc/udev/rules.d/", "644"],
  ["assets/usbsas.conf", "etc/modprobe.d/", "644"],
  ["../client/web/*", "usr/share/usbsas/web/", "644"],
  ["../client/web/static/css/*", "usr/share/usbsas/web/static/css/", "644"],
  ["../client/web/static/js/*", "usr/share/usbsas/web/static/js/", "644"],
  ["../client/web/static/i18n/*", "usr/share/usbsas/web/static/i18n/", "644"],
  ["../client/web/static/img/*", "usr/share/usbsas/web/static/img/", "644"],
  ["../client/web/static/bs/css/*", "usr/share/usbsas/web/static/bs/css/", "644"],
  ["../client/web/static/bs/js/*", "usr/share/usbsas/web/static/bs/js/", "644"],
  ["../client/web/static/fontawesome/*", "usr/share/usbsas/web/static/fontawesome/", "644"],
  ["../client/web/static/fontawesome/css/*", "usr/share/usbsas/web/static/fontawesome/css/", "644"],
  ["../client/web/static/fontawesome/js/*", "usr/share/usbsas/web/static/fontawesome/js/", "644"],
  ["../client/web/static/fontawesome/less/*", "usr/share/usbsas/web/static/fontawesome/less/", "644"],
  ["../client/web/static/fontawesome/metadata/*", "usr/share/usbsas/web/static/fontawesome/metadata/*", "644"],
  ["../client/web/static/fontawesome/scss/*", "usr/share/usbsas/web/static/fontawesome/scss/", "644"],
  ["../client/web/static/fontawesome/sprites/*", "usr/share/usbsas/web/static/fontawesome/sprites/", "644"],
  ["../client/web/static/fontawesome/webfonts/*", "usr/share/usbsas/web/static/fontawesome/webfonts/", "644"],
]
conf-files = ["/etc/usbsas/config.toml"]
