[package]
name = "usbsas-server"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"
description = "usbsas web server"

[dependencies]
actix-files = "0.6"
actix-web = "4.3"
base64 = "0.21"
clap = "4.2"
err-derive = "0.3"
futures = "0.3"
hmac = { version = "0.12", features = ["reset"] }
log = "0.4"
mac_address = "1.1"
nix = "0.26"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
systemstat = "0.2"
tempfile = "3.5"
time = "0.3"
toml = "0.7"
uname = "0.1"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[features]
integration-tests = []

# cargo-deb
[package.metadata.deb]
maintainer = "usbsas"
copyright = "usbsas"
depends = "$auto, usbsas-core"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
  ["target/release/usbsas-server", "usr/bin/", "755"],
  ["../client/web/*", "usr/share/usbsas/web/", "644"],
  ["../client/web/static/css/*", "usr/share/usbsas/web/static/css/", "644"],
  ["../client/web/static/js/*", "usr/share/usbsas/web/static/js/", "644"],
  ["../client/web/static/i18n/*", "usr/share/usbsas/web/static/i18n/", "644"],
  ["../client/web/static/img/*", "usr/share/usbsas/web/static/img/", "644"],
  ["../client/web/static/bs/css/*", "usr/share/usbsas/web/static/bs/css/", "644"],
  ["../client/web/static/bs/js/*", "usr/share/usbsas/web/static/bs/js/", "644"],
  ["../client/web/static/fontawesome/*", "usr/share/usbsas/web/static/fontawesome/", "644"],
  ["../client/web/static/fontawesome/css/*", "usr/share/usbsas/web/static/fontawesome/css/", "644"],
  ["../client/web/static/fontawesome/js/*", "usr/share/usbsas/web/static/fontawesome/js/", "644"],
  ["../client/web/static/fontawesome/less/*", "usr/share/usbsas/web/static/fontawesome/less/", "644"],
  ["../client/web/static/fontawesome/metadata/*", "usr/share/usbsas/web/static/fontawesome/metadata/*", "644"],
  ["../client/web/static/fontawesome/scss/*", "usr/share/usbsas/web/static/fontawesome/scss/", "644"],
  ["../client/web/static/fontawesome/sprites/*", "usr/share/usbsas/web/static/fontawesome/sprites/", "644"],
  ["../client/web/static/fontawesome/webfonts/*", "usr/share/usbsas/web/static/fontawesome/webfonts/", "644"],
]
