[package]
name = "usbsas-server"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "usbsas web server"

[dependencies]
actix-cors = "0.7"
actix-web = "4.6"
base64 = "0.22"
clap = "4.5"
err-derive = "0.3"
futures = "0.3"
hmac = { version = "0.12", features = ["reset"] }
log = "0.4"
mac_address = "1.1"
nix = { version = "0.29", features = ["process", "signal"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
systemstat = "0.2"
time = "0.3"
toml = "0.8"
uname = "0.1"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[features]
integration-tests = []

# cargo-deb
[package.metadata.deb]
maintainer = "usbsas"
copyright = "usbsas"
revision = "1"
depends = "$auto, usbsas-core"
section = "utility"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
  ["target/release/usbsas-server", "usr/bin/", "755"]
]
