[package]
name = "usbsas-tar2files"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
byteorder = "1.4.3"
env_logger = "0.9.1"
log = "0.4.17"
tar = "0.4.38"
thiserror = "1.0.36"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-privileges = { path = "../usbsas-privileges" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
