[package]
name = "usbsas-tar2files"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"

[dependencies]
byteorder = "1.4"
env_logger = "0.10"
log = "0.4"
tar = "0.4"
thiserror = "1.0"
usbsas-comm = { path = "../usbsas-comm" }
usbsas-sandbox = { path = "../usbsas-sandbox" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-utils = { path = "../usbsas-utils" }
