[package]
name = "usbsas-tools"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bitvec = { version = "1.0.1", optional = true }
clap = "4.0.22"
env_logger = "0.9.3"
fuse_mt = { version = "0.6.0", optional = true }
indicatif = { version = "0.17.2", optional = true }
libc = { version = "0.2.137", optional = true }
log = "0.4.17"
tempfile = { version = "3.3.0", optional = true }
thiserror = "1.0.37"
time = { version = "0.3.17", optional = true }
usbsas-comm = { path = "../usbsas-comm" }
usbsas-config = { path = "../usbsas-config", optional = true }
usbsas-dev2scsi = { path = "../usbsas-dev2scsi", optional = true }
usbsas-fs2dev = { path = "../usbsas-fs2dev", optional = true }
usbsas-net = { path = "../usbsas-net", optional = true }
usbsas-privileges = { path = "../usbsas-privileges" }
usbsas-process = { path = "../usbsas-process" }
usbsas-proto = { path = "../usbsas-proto" }
usbsas-scsi2files = { path = "../usbsas-scsi2files", optional = true }
usbsas-usbdev = { path = "../usbsas-usbdev", optional = true }
usbsas-utils = { path = "../usbsas-utils", optional = true }
users = { version = "0.11.0", optional = true }

[features]
imager = ["indicatif", "tempfile", "usbsas-config", "usbsas-dev2scsi", "usbsas-usbdev", "usbsas-utils"]
fswriter = ["bitvec", "usbsas-fs2dev"]
fuse-mount = ["fuse_mt", "libc", "time", "usbsas-scsi2files", "users"]
uploader = ["usbsas-net"]
default = ["imager", "fswriter", "fuse-mount", "uploader"]

[[bin]]
name = "usbsas-imager"
path = "src/imager.rs"
required-features = ["imager"]

[[bin]]
name = "usbsas-uploader"
path = "src/uploader.rs"
required-features = ["uploader"]

[[bin]]
name = "usbsas-fuse-mount"
path = "src/fuse-mount.rs"
required-features = ["fuse-mount"]

[[bin]]
name = "usbsas-fswriter"
path = "src/fswriter.rs"
required-features = ["fswriter"]

# cargo-deb
[package.metadata.deb]
maintainer = "usbsas"
copyright = "usbsas"
depends = "$auto"
section = "utility"
priority = "optional"
systemd-units = { enable = false }
assets = [
  ["target/release/usbsas-fuse-mount", "usr/bin/", "755"],
  ["target/release/usbsas-imager", "usr/bin/", "755"],
  ["target/release/usbsas-uploader", "usr/bin/", "755"],
  ["target/release/usbsas-fswriter", "usr/bin/", "755"],
]
